# fritiofr-emulator

./: Cargo.toml  README.md
src/: main.rs
src/cpu/: addressing_mode.rs  mod.rs  op_codes.rs
