[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nes_emulator"
path = "src/lib.rs"

[dependencies]
bitflags = "2.4.1"
rand = "=0.7.3"

piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
find_folder = "0.3.0"
piston_window = "0.129.0"
